# internal/modules/clinic/template/route.go
@@ -3,7 +3,7 @@ package template
 import "github.com/gin-gonic/gin"
 
 func RegisterRoutes(rg *gin.RouterGroup, h IHandler, authMiddleware gin.HandlerFunc, roleMiddleware gin.HandlerFunc) {
-	template := rg.Group("/template", authMiddleware, roleMiddleware)
+	template := rg.Group("/templates", authMiddleware, roleMiddleware)
 
 	template.POST("", h.Create)
 	template.GET("", h.List)
@@ -11,11 +11,10 @@ func RegisterRoutes(rg *gin.RouterGroup, h IHandler, authMiddleware gin.HandlerF
 	template.PUT("/:id", h.Update)
 	template.DELETE("/:id", h.Delete)
 
-	template.PUT("/:id/setting", h.UpdateSetting)
-	template.GET("/:id/setting", h.GetSetting)
+	template.GET("/:id/settings", h.GetSetting)
+	template.PUT("/:id/settings", h.UpdateSetting)
 
-	template.POST("/:id/pdf", h.GeneratePDF)
-	template.GET("/:id/pdf/:invoice_id", h.DownloadPDF)
-
+	template.POST("/:id/preview-pdf", h.GeneratePDF)
+	template.GET("/:id/invoices/:invoice_id/download", h.DownloadPDF)
 	template.POST("/sync-defaults", h.BulkUpdateDefaultsHandler)
 }
